# chowdsp-slides

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  slides.h
cmake/: Info.plist.in  hot_reload.cmake  package.cmake
slides/: .gitignore  deploy.sh  run_local.sh  slides.cpp  slides.gon  slides.h  slides.html
slides/assets/: code_snippet.cpp
slides/web/: run_local.sh
src/: chowdsp_slides.h  slides_allocator.h  slides_audio_player.h  slides_background_task.h  slides_bullets.h  slides_code_view.h  slides_content.h  slides_dll.h  slides_equation.h  slides_file.h  slides_footer.h  slides_image.h  slides_js.h  slides_main.cpp  slides_params.h  slides_platform.h  slides_runner.h  slides_text.h  slides_url.h  slides_webview.h
test/: test_slides.h
